added success page

--- a/src/pages/catalogue.html
+++ b/src/pages/catalogue.html
@@ -51,7 +51,7 @@
                         <p class="price">$1000</p>
                         <p class="description">Description for Laptop 1</p>
                         <button class="select-btn">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                     <div class="product-card" data-category="laptops">
                         <img src="/src/assets/images/laptop2.jpg" alt="Laptop 2">
@@ -59,7 +59,7 @@
                         <p class="price">$1200</p>
                         <p class="description">Description for Laptop 2</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                     <div class="product-card" data-category="laptops">
                         <img src="/src/assets/images/laptop3.jpg" alt="Laptop 3">
@@ -67,7 +67,7 @@
                         <p class="price">$1500</p>
                         <p class="description">Description for Laptop 3</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                 
                     <!-- Cameras -->
@@ -77,7 +77,7 @@
                         <p class="price">$800</p>
                         <p class="description">Description for Camera 1</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                     <div class="product-card" data-category="cameras">
                         <img src="/src/assets/images/camera2.png" alt="Camera 2">
@@ -85,7 +85,7 @@
                         <p class="price">$1000</p>
                         <p class="description">Description for Camera 2</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                     <div class="product-card" data-category="cameras">
                         <img src="/src/assets/images/camera3.png" alt="Camera 3">
@@ -93,7 +93,7 @@
                         <p class="price">$1300</p>
                         <p class="description">Description for Camera 3</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                 
                     <!-- Gaming Consoles -->
@@ -103,7 +103,7 @@
                         <p class="price">$300</p>
                         <p class="description">Description for Gaming Console 1</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                     <div class="product-card" data-category="gaming">
                         <img src="/src/assets/images/console2.png" alt="Gaming Console 2">
@@ -111,7 +111,7 @@
                         <p class="price">$400</p>
                         <p class="description">Description for Gaming Console 2</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                     <div class="product-card" data-category="gaming">
                         <img src="/src/assets/images/console3.png" alt="Gaming Console 3">
@@ -119,7 +119,7 @@
                         <p class="price">$500</p>
                         <p class="description">Description for Gaming Console 3</p>
                         <button class="select-btn" style="display: none;">Select</button> <!-- Hidden initially -->
-                        <a href="#" class="view-details">Rent gadget</a> <!-- Rent button -->
+                        <a href="/src/pages/success.html" class="view-details">Rent gadget</a> <!-- Rent button -->
                     </div>
                 </div>
             </section>
